feat:开发用户账号模块

--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/givemesomelove/Mapple/issues"
   },
-  "homepage": "https://github.com/givemesomelove/Mapple#readme"
+  "homepage": "https://github.com/givemesomelove/Mapple#readme",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.8.1"
+  }
 }
