--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "morgan": "^1.10.0",
+    "redis": "^5.5.6",
     "socket.io": "^4.8.1"
   }
 }
